--- a/eda.Rmd
+++ b/eda.Rmd
@@ -10,9 +10,13 @@ library(tidyverse)
 library(ggplot2)
 library(lubridate)
 library(readxl)
+library(sf)
 library(stringr)
 library(janitor)
+library(tmap)
 library(zoo)
+
+iowa_crs <- 26976
 ```
 
 
